--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "hammerjs": "^2.0.8",
     "hbs": "~3.1.0",
     "mongoose": "^4.12.5",
     "mongoose-unique-validator": "^1.0.6",
@@ -36,6 +37,7 @@
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
+    "@ngtools/webpack": "^1.8.0",
     "@types/core-js": "0.9.36",
     "@types/node": "^6.0.45",
     "angular-router-loader": "^0.5.0",
