--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^4.12.5",
     "mongoose-unique-validator": "^1.0.6",
     "morgan": "~1.6.1",
+    "ng2-utils": "^0.6.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.2.0",
     "serve-favicon": "~2.3.0",
