--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "build": "del-cli public/js/app && webpack --config webpack.config.dev.js --progress --profile --watch",
-    "build:prod": "del-cli public/js/app && ngc -p tsconfig.aot.json && ngc -p tsconfig.aot.json && webpack --config webpack.config.prod.js --progress --profile --bail && del-cli 'public/js/app/**/*.js' 'public/js/app/**/*.js.map' '!public/js/app/bundle.js' '!public/js/app/*.chunk.js' 'assets/app/**/*.ngfactory.ts' 'assets/app/**/*.shim.ts' 'assets/app/**/*.ngsummary.json' 'assets/app/**/*.ngstyle.ts'",
-    "json-server": "json-server --watch db.json --port 4568"
+    "build:prod": "del-cli public/js/app && ngc -p tsconfig.aot.json && ngc -p tsconfig.aot.json && webpack --config webpack.config.prod.js --progress --profile --bail && del-cli 'public/js/app/**/*.js' 'public/js/app/**/*.js.map' '!public/js/app/bundle.js' '!public/js/app/*.chunk.js' 'assets/app/**/*.ngfactory.ts' 'assets/app/**/*.shim.ts' 'assets/app/**/*.ngsummary.json' 'assets/app/**/*.ngstyle.ts'"
   },
   "dependencies": {
     "@angular/animations": "^4.0.0",
@@ -21,6 +20,7 @@
     "@angular/platform-server": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@angular/upgrade": "^4.0.0",
+    "@types/hammerjs": "^2.0.35",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "core-js": "^2.4.1",
@@ -39,8 +39,8 @@
   },
   "devDependencies": {
     "@ngtools/webpack": "^1.8.0",
-    "@types/core-js": "0.9.36",
-    "@types/node": "^6.0.45",
+    "@types/core-js": "^0.9.43",
+    "@types/node": "^6.0.95",
     "angular-router-loader": "^0.5.0",
     "angular2-template-loader": "^0.5.0",
     "awesome-typescript-loader": "^3.1.2",
@@ -49,7 +49,8 @@
     "json-server": "^0.12.1",
     "raw-loader": "^0.5.1",
     "ts-loader": "^2.0.3",
-    "typescript": "^2.1.4",
+    "typescript": "^2.6.2",
+    "uglifyjs-webpack-plugin": "^1.1.4",
     "webpack": "^2.2.1",
     "webpack-merge": "^4.1.0"
   }
