--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,22 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
+    "target": "es6",
     "typeRoots": [
       "node_modules/@types"
     ],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+
     "lib": [
-      "es5",
+      "es6",
       "dom"
     ],
     "types": [
+      "node",
+      "core-js",
      "hammerjs"
-   ]
+   ],
   }
 }
