--- a/package.json
+++ b/package.json
@@ -8,20 +8,22 @@
     "build:prod": "del-cli public/js/app && ngc -p tsconfig.aot.json && ngc -p tsconfig.aot.json && webpack --config webpack.config.prod.js --progress --profile --bail && del-cli 'public/js/app/**/*.js' 'public/js/app/**/*.js.map' '!public/js/app/bundle.js' '!public/js/app/*.chunk.js' 'assets/app/**/*.ngfactory.ts' 'assets/app/**/*.shim.ts' 'assets/app/**/*.ngsummary.json' 'assets/app/**/*.ngstyle.ts'"
   },
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
+    "@angular/animations": "^4.4.3",
+    "@angular/common": "^4.4.3",
     "@angular/compiler": "^4.0.0",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
+    "@angular/forms": "~4.3.6",
     "@angular/http": "^4.0.0",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/platform-server": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@angular/upgrade": "^4.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
     "@types/hammerjs": "^2.0.35",
     "body-parser": "~1.15.2",
+    "bootstrap": "^4.0.0",
     "cookie-parser": "~1.4.3",
     "core-js": "^2.4.1",
     "debug": "~2.2.0",
@@ -35,6 +37,7 @@
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.2.0",
     "serve-favicon": "~2.3.0",
+    "uglify-es": "3.2.2",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
