--- a/package.json
+++ b/package.json
@@ -5,25 +5,23 @@
   "scripts": {
     "start": "node ./bin/www",
     "build": "del-cli public/js/app && webpack --config webpack.config.dev.js --progress --profile --watch",
-    "build:prod": "del-cli public/js/app && ngc -p tsconfig.aot.json && ngc -p tsconfig.aot.json && webpack --config webpack.config.prod.js --progress --profile --bail && del-cli 'public/js/app/**/*.js' 'public/js/app/**/*.js.map' '!public/js/app/bundle.js' '!public/js/app/*.chunk.js' 'assets/app/**/*.ngfactory.ts' 'assets/app/**/*.shim.ts' 'assets/app/**/*.ngsummary.json' 'assets/app/**/*.ngstyle.ts'"
+    "build:prod": "del-cli public/js/app && ngc -p tsconfig.aot.json && ngc -p tsconfig.aot.json && webpack --config webpack.config.prod.js --progress --profile --bail && del-cli 'assets/app/**/*.js' 'assets/app/**/*.ngsummary.json' 'assets/app/**/*.ngstyle.*'"
   },
   "dependencies": {
-    "@angular/animations": "^4.4.3",
-    "@angular/common": "^4.4.3",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "~4.3.6",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/platform-server": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "@angular/upgrade": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/platform-server": "^5.0.0",
+    "@angular/router": "^5.0.0",
+    "@angular/upgrade": "^5.0.0",
     "@types/hammerjs": "^2.0.35",
     "body-parser": "~1.15.2",
-    "bootstrap": "^4.0.0",
     "cookie-parser": "~1.4.3",
     "core-js": "^2.4.1",
     "debug": "~2.2.0",
@@ -33,23 +31,21 @@
     "mongoose": "^4.12.5",
     "mongoose-unique-validator": "^1.0.6",
     "morgan": "~1.6.1",
-    "ng2-utils": "^0.6.1",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.2.0",
+    "rxjs": "^5.5.0",
     "serve-favicon": "~2.3.0",
     "uglify-es": "3.2.2",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "@ngtools/webpack": "^1.8.0",
-    "@types/core-js": "^0.9.43",
+    "@types/core-js": "0.9.43",
     "@types/node": "^6.0.95",
     "angular-router-loader": "^0.5.0",
     "angular2-template-loader": "^0.5.0",
     "awesome-typescript-loader": "^3.1.2",
     "del-cli": "^0.2.0",
     "html-loader": "^0.4.4",
-    "json-server": "^0.12.1",
     "raw-loader": "^0.5.1",
     "ts-loader": "^2.0.3",
     "typescript": "^2.6.2",
