--- a/tsconfig.aot.json
+++ b/tsconfig.aot.json
@@ -7,8 +7,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false,
-    "outDir": "./public/js/app"
+    "noImplicitAny": false
   },
   "typeRoots": [
     "node_modules/@types"
@@ -17,7 +16,6 @@
     "es6",
     "dom"
   ],
-
   "angularCompilerOptions": {
     "skipMetadataEmit": true
   }
